--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -12,6 +12,11 @@
     --sign-in: linear-gradient(to left, #5DB4E7, #92D2FF );
     --log-out-icon: #002139;
 
+    --login-box-color: white;
+    --login-form-color: #CAE9FF;
+    --login-outer-box-color: white;
+    --login-shadow: #E1D9D9;
+
     --main-topic-box-color: linear-gradient(to bottom,#1b4965,#5FA8D3 );
     --main-topic-img-color: linear-gradient(#3485bb,#61afd8 ); 
     --esp-topic-box-color: linear-gradient(to bottom,#1b4965,#5FA8D3 );
@@ -38,6 +43,12 @@ body.darkmode{
     --sign-out: linear-gradient(to left, #172A46, #172A46);
     --sign-in: linear-gradient(to left, #172A46, #172A46);
     --log-out-icon: white;
+
+    --login-box-colour: #172A46;  
+    --login-form-color: #073550;
+    --login-outer-box-color: #001524;
+    --login-shadow: #1B4965;
+
 
     --main-topic-box-color: linear-gradient(to bottom, #5FA8D3, #1b4965 );
     --main-topic-img-color: linear-gradient(#61afd8, #3485bb ); 
@@ -550,13 +561,22 @@ main{
 /* LOGIN PAGE STYLES */
 
 .login-box {
-  background: white;
+  position: relative;
+  align-items: center;
+  background: var(--login-outer-box-color);
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-  width: auto;
-  height: auto;
+  box-shadow: 0 4px 10px var(--login-shadow);
+  width: 100vh;
+  height: 60vh;
+  margin-left: 320px;
 }
+
+.login-box input,
+.login-box button {
+  margin-left: 80px; /* Adjust value as needed */
+}
+
 
 .login-box h2 {
   text-align: center;
@@ -566,26 +586,38 @@ main{
 .login-box label {
   display: block;
   margin: 10px 0 5px;
+  color: var(--header-text-color);
+  margin-left: 160px;
 }
 
 .login-box input[type="text"],
 .login-box input[type="password"] {
-  width: 97%;
+  width: 32%;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 8px;
+  text-align: center;
 }
 
 .login-box button {
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35%;
   padding: 12px;
-  background-color: #04AA6D;
+  background-color: #5FA8D3;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
   font-size: 16px;
+}
+
+#login-form {
+  background-color: var(--login-form-color);
+  border: none;
+  padding: 30px;
 }
 
 .login-box button:hover {
@@ -593,10 +625,20 @@ main{
 }
 
 .login-box .cancelbtn {
-  background-color: #f44336;
+  background-color: #3d7494;
   margin-top: 10px;
 }
 
+.tubby {
+  position: absolute; /* or fixed */
+  top: 140px;
+  right: 100px;
+  padding: 0px;
+}
+.tubby img{
+  margin-left: auto;
+  display: block;
+}
 /*LOGIN PAGE STYLES END */
 
 
@@ -705,4 +747,5 @@ input.error {
   font-size: 16px;
   margin-top: 10px;
 }
+
 /* SIGNUP PAGE STYLES END */
