--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -181,9 +181,8 @@ h2 {
 
 .overlay .closebtn {
   position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
+  right: 49%;
+  font-size: 40px;
 }
 
 @media screen and (max-height: 450px) {
