--- a/main/html/employer-set-project/styles.css
+++ b/main/html/employer-set-project/styles.css
@@ -262,6 +262,56 @@ arrow-Nav a {
     margin: 15px 20px 0 20px;
 }
 
+.overlay {
+  height: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 100px;
+  left: 0;
+  background-color: var(--side-bar-color);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.overlay a:hover, .overlay a:focus {
+  background-color: var(--sub-menu-hover);
+}
+
+.overlay .closebtn {
+  position: absolute;
+  font-size: 40px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
+
+
 .menu-item {
   position: relative;
   font-family: 'Segoe UI', sans-serif;
@@ -289,7 +339,6 @@ arrow-Nav a {
 .submenu a:hover {
   background-color: var(--sub-menu-hover);
 }
-
 
 .sidenav {
   height: 75%;
