--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -1,10 +1,12 @@
 :root{
-    --header-bg-color: #1b4965;
-    --both-outer-box-color:  linear-gradient(to bottom, #5FA8D3, #5FA8D3);
-    --footer-color: #1b4965;
-    --sub-topic-box-color: aliceblue;
+    --header-bg-color: #CAE9FF;
+    --both-outer-box-color:  linear-gradient(#5FA8D3, #1b4965);
+    --footer-color: #CAE9FF;
+    --sub-topic-box-color: #CAE9FF;
     --border-line-color: black;
-    --shadow-jitsu-color: #1b4965;
+    --box-border: #69B4E0;
+    --shadow-jitsu-color: #1c3748;
+    --container-color: white;
 
     --switch-day-night: #69B4E0;
     --switch-fill-color: #205274;
@@ -14,12 +16,14 @@
     --sub-menu-background: rgba(37,97,133, 0.7);
 }
 body.darkmode{
-    --header-bg-color: #002139;
-    --both-outer-box-color: linear-gradient(to bottom, #001524, #003A63);
-    --footer-color: #002139;
-    --sub-topic-box-color: #031825;
+    --header-bg-color: #031825;
+    --both-outer-box-color: linear-gradient(to bottom, #003A63, #001524);
+    --footer-color: #020e15;
+    --sub-topic-box-color: #0a192f;
     --border-line-color: white;
-    --shadow-jitsu-color: #001E33;
+    --shadow-jitsu-color: #0e4e73;
+    --box-border: #1b4965;
+    --container-color: #031825;
 
     --switch-day-night: #205274;
     --switch-fill-color: #69B4E0;
@@ -83,7 +87,7 @@ header a {
 }
 
 .header-text{
-    color: white;
+    color: var(--border-line-color);
     text-align: center;
     width: 100%;
     font-size: 18px;
@@ -103,36 +107,54 @@ header a {
 
 footer {
     background-color: var(--footer-color);
-    color: white;
+    color: var(--border-line-color);
     text-align: center;
-    padding: 10px;
-}
+    padding: 1rem;
+    margin: 0px;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+  }
 
 main{
     display: inline-block;
-    background-color: var(--both-outer-box-color);
+    background-image: var(--both-outer-box-color);
     width: 100%;
 }
 
 h2 {
-    color: white;
+    color: var(--border-line-color);
     text-align: center;
     font-size: 30px;
     font-weight: bold;
     font-family: 'Segoe UI', sans-serif;
 }
 
+.container{
+  border-radius: 20px;
+  background-color: var(--container-color);
+  padding-top: 0.5rem;
+  padding-bottom: 1.5rem;
+  width: 90%;
+  max-width: 1200px;
+  margin: 2rem auto 0 auto;
+  box-shadow: var(--shadow-jitsu-color) 0px 0px 10px 1px;
+}
+
 .subtopic-box {
     background-color: var(--sub-topic-box-color);
-    border: solid 3px #1b4965;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 60rem;
+
+    border: solid 3px var(--box-border);
     border-radius: 20px;
-    width: auto;
     padding: 20px;
-    margin: 20px;
-    display: block;
+    margin: 20px auto;
+
     text-align: center;
     font-size: 20px;
     color: var(--border-line-color);
+
     font-weight: bold;
     text-decoration: none;
     font-family: 'Segoe UI', sans-serif;
@@ -282,6 +304,30 @@ content {
 }
 
 span {
-color: white;
+color: var(--border-line-color);
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.page-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
