--- a/main/html/Other/styles.css
+++ b/main/html/Other/styles.css
@@ -1,40 +1,55 @@
 :root{
-    --header-bg-color: #1b4965;
-    --header-text-color:white;
+    --header-bg-color: #CAE9FF;
+    --header-text-color: black;
+    --border-header: #031825;
     --border-line-color: black;
-    --both-outer-box-color:  linear-gradient(to bottom, #5FA8D3, #5FA8D3);
-    --footer-color: #1b4965;
+    --both-outer-box-color: linear-gradient(#5FA8D3, #1b4965);
+    --shadow-jitsu-color: #1c3748;
+    --footer-color: #CAE9FF;
     --form-bg-color: #bee7fe;
     --nav-1-color: #1B4965;
 
+     --container-color: white ;
+
     --switch-day-night: #69B4E0;
     --switch-fill-color: #205274;
+    
 
     --main-topic-box-color:#bee7fe;
+    --main-border: #69B4E0;
 
     --side-bar-color: #1B4965;
     --sub-menu-hover: rgba(50,120,160, 0.7);
     --sub-menu-background: rgba(37,97,133, 0.7);
-    
 }
-body.darkmode{
-    --header-bg-color: #002139;
-    --header-text-color:white;
-    --border-line-color: white;
-    --both-outer-box-color: linear-gradient(to bottom,#0A192F, #001524);
-    --footer-color: #002139;
-    --form-bg-color: #172A46;
+
+body.darkmode {
+    --header-bg-color: #031825;
+    --header-text-color: #E6F4FF;
+    --border-header: #69B4E0;
+    --border-line-color: rgb(196, 196, 196);
+
+    --both-outer-box-color: linear-gradient(to bottom, #003A63, #001524);
+    --shadow-jitsu-color: #0e4e73;
+    --footer-color: #020e15;
+
+    --form-bg-color: #0a192f;
     --nav-1-color: #002139;
-    
+
+    --container-color: #031825;
+
     --switch-day-night: #205274;
     --switch-fill-color: #69B4E0;
 
-    --main-topic-box-color: #172A46;
+    --main-topic-box-color: #0a192f;
+    --main-border: #1b4965;
 
     --side-bar-color: #002139;
     --sub-menu-hover: rgba(11, 46, 86, 0.7);
     --sub-menu-background: rgba(9, 39, 69, 0.7);
-  }
+
+    --quiz-bg-color: #003A63;
+}
 
 #theme-switch{
     top: 20px;
@@ -66,6 +81,17 @@ body.darkmode{
 
 .darkmode #theme-switch svg:last-child{
     display: block;
+}
+
+.container{
+  border-radius: 20px;
+  background-color: var(--container-color);
+  padding-top: 0.5rem;
+  padding-bottom: 1.5rem;
+  width: 90%;
+  max-width: 1200px;
+  margin: 2rem auto 0 auto;
+  box-shadow: var(--shadow-jitsu-color) 0px 0px 10px 1px;
 }
 
 header{
@@ -114,7 +140,7 @@ main {
     margin: 30px auto;
     border-radius: 45px;
     background-color: var(--main-topic-box-color);
-    border: solid 3px #1b4965;
+    border: solid 3px var(--main-border);
     padding: 10px;
     font-family: 'Segoe UI', sans-serif;
 
@@ -172,7 +198,7 @@ body {
 
 footer {
     background-color:var(--footer-color);
-    color: white;
+    color: var(--border-line-color);
     text-align: center;
     padding: 10px;
 }
@@ -187,14 +213,15 @@ form{
     margin: 30px auto;
     border-radius: 20px;
     background-color: var(--form-bg-color);
-    border: solid 3px #1b4965;
+    border: solid 3px  var(--main-border);
     padding: 10px;
     max-width: 800px;
 }
 
 input[type=submit] {
-  background-color: #1b4965;
+  background-color: #0e68a0;
   border: none;
+  border-radius: 10px;
   color: white;
   padding: 10px;
   text-decoration: none;
@@ -212,17 +239,17 @@ label {
 select {
   padding: 10px;
   font-size: 15px;
-  border: 2px solid #1b4965;
+  border: 2px solid #0e68a0;
   border-radius: 8px;
-  background-color: #1b4965;
+  background-color: #0e68a0;
   color: white;
   cursor: pointer;
 }
 
 select:focus {
-  border-color: #0077cc;
+  border-color: #0e68a0;
   outline: none;
-  background-color: #1b4965;
+  background-color: #0e68a0;
   color: white;
 }
 
@@ -308,11 +335,10 @@ select:focus {
 .sidenav {
   height: 75%;
   width: 0;
-  position: fixed;
   z-index: 1;
-  top: 140px;
+  top: 100px;
   left: 0;
-  background-color: var(--nav-1-color);
+  background-color: var(--side-bar-color);
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -338,6 +364,13 @@ select:focus {
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
+}
+
+span {
+color: var(--border-line-color);
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 @media screen and (max-height: 450px) {
