--- a/main/html/employer-set-project/styles.css
+++ b/main/html/employer-set-project/styles.css
@@ -1,16 +1,20 @@
 :root{
-    --header-bg-color: #1b4965;
-    --header-text-color:white;
+    --header-bg-color: #CAE9FF;
+    --header-text-color: black;
     --border-line-color: black;
-    --both-outer-box-color: linear-gradient(to bottom, #5FA8D3, #5FA8D3);
-    --footer-color: #1b4965;
+    --both-outer-box-color: linear-gradient(#5FA8D3, #1b4965);
+    --shadow-jitsu-color: hsl(203, 44%, 20%);
+    --footer-color: #CAE9FF;
     --form-bg-color: #bee7fe;
     --nav-1-color: #1B4965;
+
+    --container-color: white;
 
     --switch-day-night: #69B4E0;
     --switch-fill-color: #205274;
 
     --main-topic-box-color:#bee7fe;
+    --main-border: #69B4E0;
 
     --side-bar-color: #1B4965;
     --sub-menu-hover: rgba(50,120,160, 0.7);
@@ -18,18 +22,24 @@
 
 }
 body.darkmode{
-    --header-bg-color: #002139;
-    --header-text-color:white;
-    --border-line-color: white;
-    --both-outer-box-color: linear-gradient(to bottom,#0A192F, #001524);
-    --footer-color: #002139;
-    --form-bg-color: #172A46;
+    --header-bg-color: #031825;
+    --header-text-color: #E6F4FF;
+    --border-header: #69B4E0;
+    --border-line-color: rgb(196, 196, 196);
+
+    --both-outer-box-color: linear-gradient(to bottom, #003A63, #001524);
+    --shadow-jitsu-color: #0e4e73;
+    --footer-color: #020e15;
+
+    --form-bg-color: #0a192f;
     --nav-1-color: #002139;
     
     --switch-day-night: #205274;
     --switch-fill-color: #69B4E0;
 
-    --main-topic-box-color: #172A46;
+    --main-topic-box-color: #0a192f;
+    --container-color: #031825;
+    --main-border: #1b4965;
 
     --side-bar-color: #002139;
     --sub-menu-hover: rgba(11, 46, 86, 0.7);
@@ -90,7 +100,7 @@ header a {
 }
 
 .header-text{
-    color: white;
+    color: var(--header-text-color);;
     text-align: center;
     width: 100%;
     font-size: 18px;
@@ -109,40 +119,54 @@ header a {
     
 }
 
+.container{
+  border-radius: 20px;
+  background-color: var(--container-color);
+  padding-top: 0.5rem;
+  padding-bottom: 1.5rem;
+  width: 90%;
+  max-width: 1000px;
+  margin: 2rem auto 0 auto;
+  box-shadow: var(--shadow-jitsu-color) 0px 0px 10px 1px;
+}
+
 main {
     max-width: 800px;
     margin: 30px auto;
     border-radius: 45px;
     background-color: var(--main-topic-box-color);
-    border: solid 3px #1b4965;
+    border: solid 3px var(--main-border);
     padding: 10px;
     font-family: 'Segoe UI', sans-serif;
 
 }
 
 .heading {
+    color: var(--border-header);
     text-align: center;
     font-size: 32px;
     margin: 8px 0 15px 0;
     padding-bottom: 8px;
-    border-bottom: solid 3px var(--border-line-color);
+    border-bottom: solid 3px var(--border-header);
 }
 
 .top-sub-heading {
+    color: var(--border-header);
     text-align: center;
     font-size: 20px;
     margin-top: 8px;
     padding-bottom: 3px;
-    border-bottom: solid 2px var(--border-line-color);
+    border-bottom: solid 2px var(--border-header);
 }
 
 .sub-heading {
+    color: var(--border-header);
     text-align: center;
     font-size: 20px;
     margin-top: 8px;
     padding-bottom: 3px;
-    border-bottom: solid 2px var(--border-line-color);
-    border-top: solid 2px var(--border-line-color);
+    border-bottom: solid 2px var(--border-header);
+    border-top: solid 2px var(--border-header);
 }
 
 h4 {
@@ -172,7 +196,7 @@ body {
 
 footer {
     background-color: var(--footer-color);
-    color: white;
+    color: var(--border-line-color);
     text-align: center;
     padding: 10px;
 }
@@ -187,14 +211,14 @@ form{
     margin: 30px auto;
     border-radius: 20px;
     background-color: var(--form-bg-color);
-    border: solid 3px #1b4965;
+    border: solid 3px var(--main-border);
     padding: 10px;
     max-width: 800px;
 }
 
 input[type=submit] {
-  background-color: #1b4965;
-  border: solid 3px #1b4965;
+  background-color: #0e68a0;
+  border: solid 3px #0e68a0;
   border-radius: 10px;
   color: white;
   padding: 10px;
@@ -213,17 +237,17 @@ label {
 select {
   padding: 10px;
   font-size: 15px;
-  border: 2px solid #1b4965;
+  border: 2px solid #0e68a0;
   border-radius: 8px;
-  background-color: #1b4965;
+  background-color: #0e68a0;
   color: white;
   cursor: pointer;
 }
 
 select:focus {
-  border-color: #0077cc;
+  border-color: #0e68a0;
   outline: none;
-  background-color: #1b4965;
+  background-color: #0e68a0;
   color: white;
 }
 
@@ -240,26 +264,20 @@ arrow-Nav a {
 }
 
 
-#arrow {
-    background-color: #bee7fe;
+.arrow {
     display: block;
     margin: 0;
-    border: 0;
-    border-radius: 5px;
     object-fit: fill;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
-    margin: 20px 15px 20px 15px;
-    border-radius: 20px;
-    color: inherit;
-    border : solid 3px #1b4965;;
-    border-radius : 20px;
-    background-color: #bee7fe;    
+    width: 4rem;
+    height: 4rem;
+    border : none;
+    border-radius : 20px;;    
     margin: 15px 20px 0 20px;
+    color: var(--border-header);
 }
 
 .overlay {
@@ -379,3 +397,11 @@ arrow-Nav a {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+span {
+color: var(--border-line-color);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
