--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -388,26 +388,20 @@ arrow-Nav a {
 }
 
 
-#arrow {
-    background-color: #bee7fe;
+.arrow {
     display: block;
     margin: 0;
-    border: 0;
-    border-radius: 5px;
     object-fit: fill;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
-    margin: 20px 15px 20px 15px;
-    border-radius: 20px;
-    color: inherit;
-    border : solid 3px #1b4965;;
-    border-radius : 20px;
-    background-color: #bee7fe;    
+    width: 4rem;
+    height: 4rem;
+    border : none;
+    border-radius : 20px;;    
     margin: 15px 20px 0 20px;
+    color: var(--border-header);
 }
 
 .title {
